--- a/PlantillaAPK/app/src/main/AndroidManifest.xml
+++ b/PlantillaAPK/app/src/main/AndroidManifest.xml
@@ -8,7 +8,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PantallaPresentacion" android:theme="@style/TemaPantallaPresentacion">
+        <activity
+            android:name=".PantallaPresentacion"
+            android:theme="@style/TemaPantallaPresentacion"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,7 +20,8 @@
         </activity>
         <activity android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait"></activity>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
