--- a/PlantillaAPK/app/src/main/AndroidManifest.xml
+++ b/PlantillaAPK/app/src/main/AndroidManifest.xml
@@ -8,6 +8,13 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <receiver android:name=".InterrupcionAudifonos">
+            <intent-filter>
+                <action android:name="android.media.AUDIO_BECOMING_NOISY" />
+            </intent-filter>
+        </receiver>
+
         <activity
             android:name=".PantallaPresentacion"
             android:theme="@style/TemaPantallaPresentacion"
